deploy/Undersoft.SSC.Kubernetes.Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  # This service is meant to be used by clients of the database. It exposes a ClusterIP that will
  # automatically load balance connections to the different database pods.
  name: undersoft-ssc-data-server
  labels:
    app: undersoft-ssc-data-server
spec:
  ports:
  # The main port, served by gRPC, serves Postgres-flavor SQL, internode
  # traffic and the cli.
  - port: 5432
    targetPort: 5432
    name: grpc
  # The secondary port serves the UI as well as health and debug endpoints.
  selector:
    app: undersoft-ssc-data-server
---
apiVersion: v1
kind: Service
metadata:
  # This service only exists to create DNS entries for each pod in the stateful
  # set such that they can resolve each other's IP addresses. It does not
  # create a load-balanced ClusterIP and should not be used directly by clients
  # in most circumstances.
  name: undersoft-ssc-data-server-private
  labels:
    app: undersoft-ssc-data-server
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: grpc
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  clusterIP: None
  selector:
    app: undersoft-ssc-data-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: undersoft-ssc-data-server
spec:
  selector:
    matchLabels:
      app: undersoft-ssc-data-server
  template:
    metadata:
      labels:
        app: undersoft-ssc-data-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - undersoft-ssc-data-server
              topologyKey: kubernetes.io/hostname
      containers:
      - name: undersoft-ssc-data-server
        image: de.icr.io/undersoft/undersoftsscdataserver:latest
        ports:
        - containerPort: 5432
          name: grpc
        volumeMounts:
         - name: undersoft-ssc-data-storage
           mountPath: /data
  volumeClaimTemplates:
   - metadata:
       name: undersoft-ssc-data-storage
     spec:
       accessModes:
         - "ReadWriteOnce"
       resources:
          requests:
              storage: 20Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: undersoft-ssc-service-server
spec:
  selector:
    matchLabels:
      name: undersoft-ssc-service-server
  template:
    metadata:
      labels:
        name: undersoft-ssc-service-server
    spec:
      containers:
      - name: undersoft-ssc-service-server
        image: de.icr.io/undersoft/undersoftsscserviceserver:latest
---
apiVersion: v1
kind: Service
metadata:
  name: undersoft-ssc-service-server
spec:
  selector:
    name: undersoft-ssc-service-server
  ports:
  - port: 25025
    targetPort: 25025
    name: private-https
  - port: 26026
    targetPort: 26026
    name: private-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: undersoft-ssc-service-application-server
spec:
  selector:
    matchLabels:
      name: undersoft-ssc-service-application-server
  template:
    metadata:
      labels:
        name: undersoft-ssc-service-application-server
    spec:
      containers:
      - name: undersoft-ssc-service-application-server
        image: de.icr.io/undersoft/undersoftsscserviceapplicationserver:latest
---
apiVersion: v1
kind: Service
metadata:
  name: undersoft-ssc-service-application-server
spec:
  selector:
    name: undersoft-ssc-service-application-server
  ports:
  - port: 443
    targetPort: 15015
    name: public-https
  - port: 80
    targetPort: 16016
    name: public-http
  - port: 15015
    targetPort: 15015
    name: private-https
  - port: 16016
    targetPort: 16016
    name: private-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: undersoft-ssc-ingress-server
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
  - host: undersoft.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: undersoft-ssc-service-application-server
            port: 
              number: 80
